[package]
name = "nom-exif"
version = "2.0.2"
edition = "2021"
license-file = "LICENSE"
description = "Exif/metadata parsing library written in pure Rust, both image (jpeg/heif/heic/jpg/tiff etc.) and video/audio (mov/mp4/3gp/webm/mkv/mka, etc.) files are supported."
homepage = "https://github.com/mindeng/nom-exif"
repository = "https://github.com/mindeng/nom-exif"
exclude = [
    "testdata/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
regex = { version = "1.10" }
chrono = "0.4"
tracing = { version = "0.1.40" }
tokio = { version = "1.40.0", features = ["fs", "io-util"], optional = true }
bytes = "1.7.1"
iso6709parse = "0.1.0"

[features]
# default = ["async", "json_dump"]
async = ["tokio"]
json_dump = ["serde"]

[dev-dependencies]
test-case = "3"
rand = "0.8"
chrono = "0.4"
serde_json = "1.0"
regex = { version = "1.10" }
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

[[example]]
name = "rexiftool"
# required-features = ["json_dump"]

[workspace]
members = [".", "afl-fuzz"]
