[package]
name = "rexiftool"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Pretty-print EXIF and video/audio track metadata for image/video/audio files. Companion CLI to the nom-exif library."
homepage = "https://github.com/mindeng/nom-exif"
repository = "https://github.com/mindeng/nom-exif"
keywords = ["exif", "metadata", "cli", "image", "video"]
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"

[dependencies]
nom-exif = { path = "../..", version = "3.3", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "rexiftool"
path = "src/main.rs"
